# rust-hello-world

./: Cargo.toml  index.html
.github/workflows/: deploy.yml
src/: lib.rs  main.rs
